# Boondock-4-Channel-Player

./: .gitignore  DATABASE.md  README.md  SERIAL.md  app.py  audio_player.db  audio_service.py  config.py  firmware_service.py  log_summary_service.py  models.py  pyproject.toml  requirements.txt  serial_service.py  test_service.py
static/css/: style.css
static/js/: app.js  theme.js
templates/: devices.html  firmware.html  history.html  index.html  player.html  sessions.html  terminal.html  testing.html
