[project]
name = "esp32-webstream"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "pyserial>=3.5",
  "paho-mqtt>=1.6.1"
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
log-level = "info"
